# serializer version: 1
# name: test_entities[media_player.spotify_spotify_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'DESKTOP-BKC5SIK',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.spotify_spotify_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'spotify',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 4639287>,
    'translation_key': 'spotify',
    'unique_id': '1112264111',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[media_player.spotify_spotify_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/media_player_proxy/media_player.spotify_spotify_1?token=mock-token&cache=7bb89748322acb6c',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Spotify spotify_1',
      <MediaPlayerEntityStateAttribute.MEDIA_ALBUM_NAME: 'media_album_name'>: 'Permanent Waves',
      <MediaPlayerEntityStateAttribute.MEDIA_ARTIST: 'media_artist'>: 'Rush',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_ID: 'media_content_id'>: 'spotify:track:4e9hUiLsN4mx61ARosFi7p',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_TYPE: 'media_content_type'>: <MediaType.MUSIC: 'music'>,
      <MediaPlayerEntityStateAttribute.MEDIA_DURATION: 'media_duration'>: 296,
      <MediaPlayerEntityStateAttribute.MEDIA_PLAYLIST: 'media_playlist'>: 'Spotify Web API Testing playlist',
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION: 'media_position'>: 249,
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION_UPDATED_AT: 'media_position_updated_at'>: HAFakeDatetime(2023, 10, 21, 0, 0, tzinfo=datetime.timezone.utc),
      <MediaPlayerEntityStateAttribute.MEDIA_TITLE: 'media_title'>: 'The Spirit Of Radio',
      <MediaPlayerEntityStateAttribute.MEDIA_TRACK: 'media_track'>: 1,
      <MediaPlayerEntityStateAttribute.MEDIA_REPEAT: 'repeat'>: <RepeatMode.OFF: 'off'>,
      <MediaPlayerEntityStateAttribute.MEDIA_SHUFFLE: 'shuffle'>: False,
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'Master Bathroom Speaker',
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'DESKTOP-BKC5SIK',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 4639287>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.25,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.spotify_spotify_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'playing',
  })
# ---
# name: test_podcast[media_player.spotify_spotify_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'DESKTOP-BKC5SIK',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.spotify_spotify_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'spotify',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 2048>,
    'translation_key': 'spotify',
    'unique_id': '1112264111',
    'unit_of_measurement': None,
  })
# ---
# name: test_podcast[media_player.spotify_spotify_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/media_player_proxy/media_player.spotify_spotify_1?token=mock-token&cache=cf1e6e1e830f08d3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Spotify spotify_1',
      <MediaPlayerEntityStateAttribute.MEDIA_ARTIST: 'media_artist'>: 'Safety Third',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_ID: 'media_content_id'>: 'spotify:episode:3o0RYoo5iOMKSmEbunsbvW',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_TYPE: 'media_content_type'>: <MediaType.PODCAST: 'podcast'>,
      <MediaPlayerEntityStateAttribute.MEDIA_DURATION: 'media_duration'>: 3690,
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION: 'media_position'>: 5,
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION_UPDATED_AT: 'media_position_updated_at'>: HAFakeDatetime(2023, 10, 21, 0, 0, tzinfo=datetime.timezone.utc),
      <MediaPlayerEntityStateAttribute.MEDIA_TITLE: 'media_title'>: 'My Squirrel Has Brain Damage - Safety Third 119',
      <MediaPlayerEntityStateAttribute.MEDIA_REPEAT: 'repeat'>: <RepeatMode.OFF: 'off'>,
      <MediaPlayerEntityStateAttribute.MEDIA_SHUFFLE: 'shuffle'>: False,
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'Sonos Roam SL',
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'DESKTOP-BKC5SIK',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 2048>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.46,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.spotify_spotify_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'playing',
  })
# ---
# name: test_search_media
  dict({
    'result': list([
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children': list([
        ]),
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify:track:2pj2A25YQK4uMxhZheNx7R',
        'media_content_type': 'spotify://track',
        'not_shown': 0,
        'search_media_classes': None,
        'thumbnail': None,
        'title': 'Otherside',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children': list([
        ]),
        'children_media_class': None,
        'media_class': <MediaClass.TRACK: 'track'>,
        'media_content_id': 'spotify:track:2lKOI1nwP5qZtZC7TGQVY8',
        'media_content_type': 'spotify://track',
        'not_shown': 0,
        'search_media_classes': None,
        'thumbnail': None,
        'title': 'I Think I Need A DJ',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'can_search': False,
        'children': list([
        ]),
        'children_media_class': <MediaClass.ALBUM: 'album'>,
        'media_class': <MediaClass.ARTIST: 'artist'>,
        'media_content_id': 'spotify:artist:74Yus6IHfa3tWZzXXAYtS2',
        'media_content_type': 'spotify://artist',
        'not_shown': 0,
        'search_media_classes': None,
        'thumbnail': None,
        'title': 'Onkruid',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'can_search': False,
        'children': list([
        ]),
        'children_media_class': <MediaClass.ALBUM: 'album'>,
        'media_class': <MediaClass.ARTIST: 'artist'>,
        'media_content_id': 'spotify:artist:6s5ubAp65wXoTZefE01RNR',
        'media_content_type': 'spotify://artist',
        'not_shown': 0,
        'search_media_classes': None,
        'thumbnail': None,
        'title': 'Joost',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'can_search': False,
        'children': list([
        ]),
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.ALBUM: 'album'>,
        'media_content_id': 'spotify:album:57MSBg5pBQZH5bfLVDmeuP',
        'media_content_type': 'spotify://album',
        'not_shown': 0,
        'search_media_classes': None,
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b2733126a95bb7ed4146a80c7fc6',
        'title': 'In Waves',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'can_search': False,
        'children': list([
        ]),
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.ALBUM: 'album'>,
        'media_content_id': 'spotify:album:3DQueEd1Ft9PHWgovDzPKh',
        'media_content_type': 'spotify://album',
        'not_shown': 0,
        'search_media_classes': None,
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b2736b8a4828e057b7dc1c4a4d39',
        'title': 'ten days',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'can_search': False,
        'children': list([
        ]),
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify:playlist:4WkWJ0EjHEFASDevhM8oPw',
        'media_content_type': 'spotify://playlist',
        'not_shown': 0,
        'search_media_classes': None,
        'thumbnail': 'https://i.scdn.co/image/ab67616d0000b273d061f5bfae8d38558f3698c1',
        'title': 'Hyper',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'can_search': False,
        'children': list([
        ]),
        'children_media_class': <MediaClass.TRACK: 'track'>,
        'media_class': <MediaClass.PLAYLIST: 'playlist'>,
        'media_content_id': 'spotify:playlist:1RHirWgH1weMsBLi4KOK9d',
        'media_content_type': 'spotify://playlist',
        'not_shown': 0,
        'search_media_classes': None,
        'thumbnail': 'https://mosaic.scdn.co/640/ab67616d0000b2732f3e58dd611d177973cb3a8cab67616d0000b27345cab965cb4639a4e669564aab67616d0000b2739e83c93811be6abfad8649d6ab67616d0000b273e4c03429788f0aff263a5fc6',
        'title': 'Ain’t got shit on me',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'can_search': False,
        'children': list([
        ]),
        'children_media_class': <MediaClass.EPISODE: 'episode'>,
        'media_class': <MediaClass.PODCAST: 'podcast'>,
        'media_content_id': 'spotify:show:5OzkclFjD6iAjtAuo7aIYt',
        'media_content_type': 'spotify://show',
        'not_shown': 0,
        'search_media_classes': None,
        'thumbnail': 'https://i.scdn.co/image/ab6765630000f68db5f65a943ef4f707bf79949b',
        'title': 'Toni and Ryan',
      }),
      dict({
        'can_expand': True,
        'can_play': True,
        'can_search': False,
        'children': list([
        ]),
        'children_media_class': <MediaClass.EPISODE: 'episode'>,
        'media_class': <MediaClass.PODCAST: 'podcast'>,
        'media_content_id': 'spotify:show:6XYRres0KZtnTqKcLavWR2',
        'media_content_type': 'spotify://show',
        'not_shown': 0,
        'search_media_classes': None,
        'thumbnail': 'https://i.scdn.co/image/ab6765630000f68d5fccb05c5685c081d5c2ad9c',
        'title': 'BLAST Push To Talk',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children': list([
        ]),
        'children_media_class': None,
        'media_class': <MediaClass.EPISODE: 'episode'>,
        'media_content_id': 'spotify:episode:3ssmxnilHYaKhwRWoBGMbU',
        'media_content_type': 'spotify://episode',
        'not_shown': 0,
        'search_media_classes': None,
        'thumbnail': 'https://i.scdn.co/image/ab6765630000ba8af44e9ef63c2d6fb44cb0c9bf',
        'title': 'The Great War - Fallout Lorecast EP 1',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children': list([
        ]),
        'children_media_class': None,
        'media_class': <MediaClass.EPISODE: 'episode'>,
        'media_content_id': 'spotify:episode:1bbj9aqeeZ3UMUlcWN0S03',
        'media_content_type': 'spotify://episode',
        'not_shown': 0,
        'search_media_classes': None,
        'thumbnail': 'https://i.scdn.co/image/ab6765630000ba8a655b54a66471089d27dbb03f',
        'title': 'Who Dropped the First Bomb?',
      }),
    ]),
  })
# ---
